# VectorSearch

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
benchmarks/: recall_sweep.cpp
docs/design/: DESIGN.md  architecture.mmd  design.html  module-map.mmd  search-flow.mmd
include/vectorsearch/: distance.hpp  flat_index.hpp  hnsw_index.hpp  index.hpp  scalar_quantized_index.hpp  scalar_quantizer.hpp
src/: distance.rs  error.rs  flat_index.cpp  hnsw_index.cpp  lib.rs  scalar_quantized_index.cpp  scalar_quantizer.cpp
src/index/: flat.rs  mod.rs
tests/: check.hpp  flat.rs  test_distance.cpp  test_flat.cpp  test_hnsw.cpp  test_recall.cpp  test_scalar_quantized_index.cpp  test_scalar_quantizer.cpp
tests/utils/: add_wrong_dim.hpp  random_data.hpp  recall.hpp
